# weatherman

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: forecast-request.yml
forecastingapi/: __init__.py  cli.py
scripts/: run_forecast.py
site/: package-lock.json  package.json
site/functions/api/: dispatch.ts  run-status.ts
site/src/components/: Navbar.astro
site/src/data/: forecast-index.json
site/src/data/forecasts/: 20260223-123912-pst-my-forecast-run.json  20260223-124255-pst-my-forecast-run.json  20260223-125102-pst-status-custom-1.json  20260223-125244-pst-my-forecast-run.json  20260223-130106-pst-my-forecast-run.json  20260223-130110-pst-demo-m5-test.json  20260223-131848-pst-my-forecast-run.json  20260223-132826-pst-backtest-view.json  20260223-133055-pst-my-forecast-run.json  20260223-144428-pst-my-forecast-run.json  20260223-144442-pst-my-forecast-run.json  20260223-150620-pst-my-forecast-run.json  20260223-152221-pst-my-forecast-run.json  20260223-155015-pst-my-forecast-run.json  20260223-155818-pst-my-forecast-run.json  20260223-160159-pst-my-forecast-run.json  20260223-162013-my-forecast-run.json  20260223-162205-pst-regtest-custom-a.json  20260223-162627-pst-my-forecast-run.json  20260223-163030-pst-my-forecast-run.json  20260223-163400-my-forecast-run.json  20260223-163441-demo-m5-test.json  (+16 more)
site/src/layouts/: ForecastPage.astro  MainLayout.astro
site/src/pages/: index.astro  m5.astro
tests/: test_models.py
weatherman/: __init__.py  cli.py  models.py  service.py
workflows/: example_payload.json
(+1 files in other folders)
